--- a/Theme.css
+++ b/Theme.css
@@ -25,9 +25,9 @@
   width: 210px;
 }
 .listItem_c96c45 {
-  scale: 75%;
+  scale: 70%;
   justify-content: left;
-  margin: 0 0 -6px;
+  margin: 0 0 -10px;
 }
 .userPanelOuter_c69a7b.userProfileOuterUnthemed_c69a7b.theme-dark.container_ecc60d {
   width: 210px;
@@ -38,13 +38,13 @@
   margin: 0;
   padding: 0 5px 5px;
 }
-.pill_a5ad63.wrapper_fd07a3 {
+.pill_f9623d.wrapper_c4cd66 {
   left: -12px;
-  scale: 80%;
+  scale: 90%;
 }
-.pill_f9623d.wrapper_fd07a3 {
+.pill_a5ad63.wrapper_c4cd66 {
   left: -12px;
-  scale: 80%;
+  scale: 90%;
 }
 .wrapper_fea3ef.guilds_a4d4d9 {
   width: 50px;
