--- a/Theme.css
+++ b/Theme.css
@@ -33,6 +33,12 @@
   justify-content: left;
   margin: 0 0 -10px;
 }
+.guildSeparator_d0c57e {
+  scale: 0%;
+}
+.expandedFolderBackground_bc7085 {
+  scale: 0%;
+}
 .userPanelOuter_c69a7b.userProfileOuterUnthemed_c69a7b.theme-dark.container_ecc60d {
   width: 210px;
 }
