--- a/Theme.css
+++ b/Theme.css
@@ -24,6 +24,9 @@
   --background-primary-alt: black;
   --background-secondary: black;
   --background-secondary-alt: black;
+  --primary-630: black;
+  --primary-700: black;
+  --primary-660: black;
 }
 .profilePanel_b433b4 {
   width: 210px;
