--- a/Theme.css
+++ b/Theme.css
@@ -84,6 +84,6 @@
 .content_d0a252.clamp_d0a252.singleLineAlign_d0a252 {
   display: contents;
 }
-.userPanelOuter_c69a7b.userProfileOuterThemed_c69a7b.theme-dark.custom-theme-background.custom-profile-theme.container_a823cd {
+.userPanelOuter_c69a7b.userProfileOuterThemed_c69a7b.theme-dark.images-dark.custom-theme-background.custom-profile-theme.container_a823cd {
   width: 210px;
 }
