--- a/Theme.css
+++ b/Theme.css
@@ -46,12 +46,6 @@
 .userPanelOuter_c69a7b.userProfileOuterUnthemed_c69a7b.theme-dark.container_ecc60d {
   width: 210px;
 }
-.overlayBackground_c69a7b {
-  opacity: 90%;
-  border-radius: 0;
-  margin: 0;
-  padding: 0 5px 5px;
-}
 .pill_f9623d.wrapper_c4cd66 {
   left: -12px;
   scale: 90%;
@@ -84,6 +78,6 @@
 .content_d0a252.clamp_d0a252.singleLineAlign_d0a252 {
   display: contents;
 }
-.userPanelOuter_c69a7b.userProfileOuterThemed_c69a7b.theme-dark.images-dark.custom-theme-background.custom-profile-theme.container_a823cd {
-  width: 210px;
+.container_a823cd {
+  width: 210px; 
 }
