--- a/Theme.css
+++ b/Theme.css
@@ -81,3 +81,45 @@
 .container_a823cd {
   width: 210px; 
 }
+.body_a972fe {
+  margin: 0 3px;
+}
+.overlayBackground_c69a7b.overlay_a8795b {
+  margin: 0 3px;
+}
+.divider_e3d8a6.divider_a8795b {
+  display: none;
+}
+.usernameRow_c32acf {
+  justify-content: center;
+}
+.tags_c32acf.panel_c32acf.pronouns_c32acf {
+  justify-content: center;
+}
+.lineClamp2Plus_a595eb {
+  display: block;
+}
+.text-sm\/normal_dc00ef {
+  line-height: 1;
+}
+.avatar_f94206.panel_f94206 {
+  left: 31.5%;
+  top: 65px;
+}
+.header_a823cd {
+  margin-bottom: 0;
+}
+.userPanelInner_c69a7b.userProfileInner_c69a7b.userPanelInnerThemed_c69a7b {
+  background: none;
+}
+.wrapper_cb78f1.panel_cb78f1 {
+  gap: 3px;
+  justify-content: center;
+  right: 25%
+}
+.banner_d5fdb1.banner_a823cd {
+  display: none;
+}
+.nicknameIcons_c32acf {
+  display: none;
+}
