--- a/Theme.css
+++ b/Theme.css
@@ -185,7 +185,7 @@
   left: 98px;
 }
 .statusBubbleOuter_d0a252 {
-  min-width: 64px;
+  min-width: 182px;
 }
 .theme-dark .statusBubbleOuter_d0a252:before {
   display: none;
@@ -196,9 +196,9 @@
 .custom-profile-theme .biteSizeInnerThemed_c69a7b {
   background: none;
 }
-.maxBioHeight_abaf7d {
-  max-height: fit-content;
-}
 .statusBubbleOuter_d0a252.panel_d0a252 {
   display: none;
+}
+.markup_f8f345 {
+  line-height: 0;
 }
