--- a/Theme.css
+++ b/Theme.css
@@ -82,6 +82,9 @@
 .statusBubbleWithTextPadding_d0a252 {
   padding: 5px 5px;
 }
+.tags_c32acf.panel_c32acf {
+  justify-content: center;
+}
 .content_d0a252.clamp_d0a252.singleLineAlign_d0a252 {
   display: contents;
 }
