--- a/Theme.css
+++ b/Theme.css
@@ -82,7 +82,7 @@
 .statusBubbleWithTextPadding_d0a252 {
   padding: 5px 5px;
 }
-.tags_c32acf.panel_c69a7b {
+.tags_c32acf.panel_c32acf {
   justify-content: center;
 }
 .content_d0a252.clamp_d0a252.singleLineAlign_d0a252 {
@@ -103,7 +103,7 @@
 .usernameRow_c32acf {
   justify-content: center;
 }
-.tags_c32acf.panel_c69a7b.pronouns_c32acf {
+.tags_c32acf.panel_c32acf.pronouns_c32acf {
   justify-content: center;
 }
 .lineClamp2Plus_a595eb {
