--- a/Theme.css
+++ b/Theme.css
@@ -112,7 +112,7 @@
 .text-sm\/normal_dc00ef {
   line-height: 1;
 }
-.avatar_f94206.panel_c69a7b {
+.avatar_f94206.panel_f94206 {
   left: 31.5%;
   top: 65px;
 }
@@ -122,7 +122,7 @@
 .userPanelInner_c69a7b.userProfileInner_c69a7b.userPanelInnerThemed_c69a7b {
   background: none;
 }
-.wrapper_cb78f1.panel_c69a7b {
+.wrapper_cb78f1.panel_cb78f1 {
   gap: 3px;
   justify-content: center;
   right: 25%
