--- a/Theme.css
+++ b/Theme.css
@@ -50,7 +50,7 @@
 .expandedFolderBackground_bc7085 {
   scale: 0%;
 }
-.userPanelOuter_c69a7b.userProfileOuterUnthemed_c69a7b.theme-dark.container_ecc60d {
+.outer_c69a7b.theme-dark.images-dark.custom-theme-background.custom-profile-theme.panel_c69a7b {
   width: 210px;
 }
 .pill_f9623d.wrapper_c4cd66 {
