--- a/Theme.css
+++ b/Theme.css
@@ -36,7 +36,7 @@
   --radius-xs: 5px;
   --radius-xxl: 5px;
 }
-.profilePanel_b433b4 {
+.panel_c32acf {
   width: 210px;
 }
 .listItem_c96c45 {
@@ -49,9 +49,6 @@
 }
 .expandedFolderBackground_bc7085 {
   scale: 0%;
-}
-.outer_c69a7b.panel_c69a7b {
-  width: 210px;
 }
 .pill_f9623d.wrapper_c4cd66 {
   left: -12px;
