--- a/Theme.css
+++ b/Theme.css
@@ -109,7 +109,7 @@
 .text-sm\/normal_dc00ef {
   line-height: 1;
 }
-.avatar_f94206.panel_f94206 {
+.avatar_c32acf.panel_c32acf {
   left: 31.5%;
   top: 65px;
 }
@@ -119,7 +119,7 @@
 .userPanelInner_c69a7b.userProfileInner_c69a7b.userPanelInnerThemed_c69a7b {
   background: none;
 }
-.wrapper_cb78f1.panel_cb78f1 {
+.wrapper_c32acf.panel_c32acf {
   gap: 3px;
   justify-content: center;
   right: 25%
