--- a/Theme.css
+++ b/Theme.css
@@ -176,7 +176,7 @@
 .viewFullBioColor_abaf7d {
   width: 100%;
 }
-.avatar_f94206.fullSize_f94206 {
+.avatar_c32acf.fullSize_c32acf {
   left: 16px;
   top: -72px;
 }
