--- a/Theme.css
+++ b/Theme.css
@@ -130,7 +130,7 @@
 .nicknameIcons_c32acf {
   display: none;
 }
-.visibleContainer_d0a252.panel_c69a7b {
+.visibleContainer_d0a252.biteSize_d0a252 {
   left: 140px;
   scale: 95%;
 }
