--- a/Theme.css
+++ b/Theme.css
@@ -287,3 +287,9 @@
 .imagePosition_fa854f {
   padding: 0 0 0 15px;
 }
+.oneByOneGridSingle_cda674 {
+  border-radius: 0;
+}
+.visualMediaItemContainer_cda674 {
+  border-radius: 0;
+}
