--- a/FloppisTheme.css
+++ b/FloppisTheme.css
@@ -45,5 +45,5 @@
   width: 280px;
 }
 .banner_d5fdb1, .banner_d5fdb1.banner_a823cd {
-  background-image: url("https://media1.tenor.com/m/aZZVtJg8rZYAAAAd");
+  background-image: url("https://raw.githubusercontent.com/xf1op/DiscordThemeIThink/refs/heads/main/puppi.png");
 }
