--- a/Theme.css
+++ b/Theme.css
@@ -5,302 +5,11 @@
  * @description Custom Theme And Random Stuff :3
 */
 
-:root {
-  --background_v: var(--background_s, var(--background));
-  --backgroundposition_v: var(--backgroundposition_s, var(--backgroundposition));
-  --backgroundsize_v: var(--backgroundsize_s, var(--backgroundsize));
-  --backgroundblur_v: calc(1px * var(--backgroundblur_s, var(--backgroundblur)));
-  --background: url('https://static1.e621.net/data/43/00/430083f1b8ded31b47764ce7924f7595.png');
-  --server-size: var(--HSL-size, 35px);
-  --server-spacing: var(--HSL-server-spacing, var(--HSL-spacing, 10px));
-  --server-container: calc(var(--server-size) + 20px);
-  --server-direction: var(--HSL-server-direction, column);
-  --server-alignment: var(--HSL-server-alignment, flex-start);
-  --channeltextarea-background: rgb(50, 0, 0);
-  --channel-text-area-placeholder: rgb(255, 255, 255);
-  --background-modifier-selected: rgb(50, 0, 0);
-  --background-modifier-hover: rgb(30, 0, 0);
-  --background-modifier-active: rgb(50, 0, 0);
-  --background-mentioned: rgb(30, 0, 0);
-  --background-mentioned-hover: rgb(0, 0, 0);
-  --background-tertiary: rgb(30, 0, 0);
-  --background-message-hover: rgb(15, 0, 0);
-  --background-primary: black;
-  --background-secondary: rgb(15, 0, 0);
-  --background-secondary-alt: rgb(15, 0, 0);
-  --primary-630: black;
-  --primary-700: black;
-  --primary-660: black;
-  --primary-600: black;
-  --primary-600-hal: black;
-  --radius-xs: 3px;
-  --radius-sm: 3px;
-  --radius-md: 3px;
-  --radius-lg: 3px;
-  --radius-xl: 3px;
-  --radius-xs: 3px;
-  --radius-xxl: 3px;
-}
-:where(.overlay_c69a7b) {
-  background: rgba(50,15,15,100);
-}
-.inner_c69a7b.biteSize_c69a7b {
-  background: rgb(30,0,0);
-}
-.inner_c69a7b.fullSize_c69a7b {
-  background: rgb(30,0,0);
-}
-.overlay_a8795b {
-  margin: 0;
-}
-.section_d8eba3 {
-  padding: 2px 0 2px 4px;
-}
-.panel_c69a7b {
-  width: 210px;
-}
-.inner_c69a7b.panel_c69a7b {
-  width: 210px;
-  background: rgb(15,0,0);
-}
-.listItem_c96c45 {
-  scale: 70%;
-  justify-content: left;
-  margin: 0 0 -10px;
-}
-.guildSeparator_d0c57e {
-  scale: 0%;
-}
-.expandedFolderBackground_bc7085 {
-  scale: 0%;
-}
-.lineClamp2Plus_a595eb {
-  display: block;
-}
-.pill_f9623d.wrapper_c4cd66 {
-  left: -12px;
-  scale: 90%;
-}
-.pill_a5ad63.wrapper_c4cd66 {
-  left: -12px;
-  scale: 90%;
-}
-.wrapper_fea3ef.guilds_a4d4d9 {
-  width: 50px;
-}
-[class*="withTagAsButton"] {
-  min-width: 82px !important;
-}
-.sidebar_a4d4d9 {
-  width: 226px;
-}
-.privateChannels_f0963d {
-  flex-direction: column-reverse;
-}
-.scroller_c47fa9.thin_eed6a8.scrollerBase_c49869.fade_eed6a8 {
-  display: block;
-}
-.statusBubbleOuter_d0a252 {
-  max-width: 96px;
-}
-.statusBubbleWithTextPadding_d0a252 {
-  padding: 5px 5px;
-}
-.tags_c32acf.panel_c32acf {
-  justify-content: center;
-}
-.content_d0a252.clamp_d0a252.singleLineAlign_d0a252 {
-  display: contents;
-}
-.container_a823cd {
-  width: 210px; 
-}
-.body_a972fe {
-  margin: 0;
-}
-.overlayBackground_c69a7b.overlay_a8795b {
-  margin: 0 3px;
-}
-.divider_e3d8a6.divider_a8795b {
-  display: none;
-}
-.usernameRow_c32acf {
-  justify-content: center;
-}
-.tags_c32acf.panel_c32acf.pronouns_c32acf {
-  justify-content: center;
-}
-.text-sm\/normal_dc00ef {
-  line-height: 1;
-  padding: 0 4px 0 4px;
-  text-align: center;
-}
-.overlay_a972fe {
-  padding: 0;
-}
-.avatar_f94206.panel_f94206 {
-  left: 31.5%;
-  top: 65px;
-}
-.userPanelInner_c69a7b.userProfileInner_c69a7b.userPanelInnerThemed_c69a7b {
-  background: none;
-}
-.header_a823cd {
-  margin-bottom: 0;
-}
-.userPanelInner_c69a7b.userProfileInner_c69a7b.userPanelInnerThemed_c69a7b {
-  background: none;
-}
-.wrapper_cb78f1.panel_cb78f1 {
-  gap: 3px;
-  justify-content: center;
-  right: 25%
-}
-.banner_d5fdb1.banner_a823cd {
-  display: none;
-}
-.nicknameIcons_c32acf {
-  display: none;
-}
 * {
-   animation: 0 !important;
-  transition: 0ms !important;
+  animation: 0 !important;
+  transition: 0 !important;
 }
-.tags_c32acf.fullSize_c32acf.pronouns_c32acf {
-  justify-content: center;
-}
-.tags_c32acf.biteSize_c32acf.pronouns_c32acf {
-  justify-content: center;
-}
-.biteSizeInnerThemed_c69a7b {
-  gap: 0;
-}
-.userProfileModalInner_c69a7b.userProfileInner_c69a7b.fullSizeInnerThemed_c69a7b {
-  --profile-gradient-overlay-color: hsla(0,0%,0%,0.0);
-}
-.mask_d5fdb1 {
-  opacity: 0;
-}
-.container_c32acf {
-  background: rgb(var(--bg-overlay-color)/var(--bg-overlay-opacity-5));
-  border-radius: var(--radius-xs);
-}
-.mutuals_fc9b46 {
-  background: rgb(var(--bg-overlay-color)/var(--bg-overlay-opacity-5));
-  border-radius: var(--radius-xs);
-}
-.descriptionClamp_abaf7d {
-  background: rgb(var(--bg-overlay-color)/var(--bg-overlay-opacity-5));
-  border-radius: var(--radius-xs);
-}
-.custom-profile-theme .inner_c69a7b {
-  background: rgb(var(--bg-overlay-color)/var(--bg-overlay-opacity-5));
-  border-radius: var(--radius-xs);
-}
-.viewFullBio_abaf7d.button_dd4f85.lookBlank_dd4f85.viewFullBioColor_abaf7d.grow_dd4f85 {
-  background: rgb(var(--bg-overlay-color)/var(--bg-overlay-opacity-5));
-  border-radius: var(--radius-xs);
-}
-.viewFullBioColor_abaf7d {
-  width: 100%;
-}
-.avatar_c32acf.fullSize_c32acf {
-  left: 16px;
-  top: -72px;
-}
-.visibleContainer_af9888.panel_af9888 {
-  display: none;
-}
-.statusBubbleOuter_d0a252 {
-  min-width: 182px;
-}
-.theme-dark .statusBubbleOuter_d0a252:before {
-  display: none;
-}
-.theme-dark .statusBubbleOuter_d0a252:after {
-  display: none;
-}
-.custom-profile-theme .biteSizeInnerThemed_c69a7b {
-  background: none;
-}
-.statusBubbleOuter_d0a252.panel_c69a7b {
-  display: none;
-}
-.header_ae1fa2 {
-  justify-content: center;
-}
-.header_ae1fa2 [class="text-xs/semibold_dc00ef defaultColor_e42ec6 headerText_ae1fa2"] {
-  font-size: 14px;
-  font-style: italic;
-  line-height: 1;
-  font-weight: bold;
-}
-.overlay_c69a7b.panel_c69a7b.card_ae1fa2.card_ae1fa2.activity_a972fe [class="body_ae1fa2"] {
-  padding: 0 6px 0 6px;
-}
-.overlay_c69a7b.panel_c69a7b.card_ae1fa2.card_ae1fa2.activity_a972fe [class="actions_ae1fa2"] {
-  padding: 0 6px 3px 6px;
 
-}
-.activity_a972fe {
-  padding: 0;
-}
-.card_ae1fa2 {
-  gap: 3px;
-}
-.headings_ba4d80 [class="text-xs/semibold_dc00ef defaultColor_e42ec6"] {
-  font-size: 14px;
-  font-style: italic;
-  line-height: 1;
-  font-weight: bold;
-  text-align: center;
-}
-.section_ba4d80 {
-  gap: 0;
-}
-.details_ae1fa2 {
-  width: 80%;
-  margin: 0;
-  background:rgb(75,30,30);
-  gap: initial;
-  text-align: -webkit-center;
-  font-style: italic;
-  line-height: 1;
-  font-weight: bolder;
-  border-radius: 6px;
-}
-.badgesContainer_d60c6d.badges_ae1fa2 {
-  justify-content: center;
-}
-.avatars_ccc074 {
-  justify-content: center;
-}
-.details_ae1fa2 [class="container_b5cd55"] {
-  display: inherit;
-  align-self: center;
-}
-.content_ae1fa2.fullSize_ae1fa2 {
-  align-items: center;
-  gap: 15px;
-}
-.overlay_c69a7b.fullSize_c69a7b.card_ae1fa2.card_ae1fa2 {
-  align-content: center;
-}
-.card_ae1fa2 {
-  padding: 4px;
-}
-.imagePosition_fa854f {
-  padding: 0 0 0 15px;
-}
-.oneByOneGridSingle_cda674 {
-  border-radius: 0;
-}
-.visualMediaItemContainer_cda674 {
-  border-radius: 0;
-}
-.scrollerInner_e2e187 {
-  background-image: url('https://static1.e621.net/data/43/00/430083f1b8ded31b47764ce7924f7595.png');
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  background-size: 45px;
+.outer_c0bea0 {
+  width: 280px;s
 }
