--- a/Theme.css
+++ b/Theme.css
@@ -1,8 +1,8 @@
 /**
- * @name Flop' o' purpcord
+ * @name Floppi's theme
  * @author xf1op
  * @version yes
- * @description Custom Theme And Random Stuff :3
+ * @description Theme
 */
 
 * {
