--- a/Theme.css
+++ b/Theme.css
@@ -16,3 +16,6 @@
 .lineClamp2Plus__4bd52 {
   display: block;
 }
+.banner__68edb, .banner__68edb.banner__537ec {
+  background-image: url(https://raw.githubusercontent.com/xf1op/DiscordThemeIThink/refs/heads/main/puppi.png)
+}
