--- a/Theme.css
+++ b/Theme.css
@@ -15,6 +15,7 @@
 }
 .text-sm\/normal_cf4812 {
     display: block;
+    line-height: 1.05;
 }
 .banner__68edb, .banner__68edb.banner__537ec {
     background-image: url(https://raw.githubusercontent.com/xf1op/DiscordThemeIThink/refs/heads/main/puppi.png)
