--- a/Theme.css
+++ b/Theme.css
@@ -9,7 +9,9 @@
     animation: 0 !important;
     transition: 0ms !important;
 }
-  
+.sidebar_c48ade {
+    width: 290px;
+}
 :where(.outer_c0bea0).panel_c0bea0 {
     width: 280px;
 }
