--- a/Theme.css
+++ b/Theme.css
@@ -9,7 +9,7 @@
     animation: 0 !important;
     transition: 0ms !important;
 }
-.sidebar_c48ade {
+.visual-refresh.sidebar_c48ade {
     width: 290px;
 }
 :where(.outer_c0bea0).panel_c0bea0 {
