--- a/Theme.css
+++ b/Theme.css
@@ -9,8 +9,8 @@
     animation: 0 !important;
     transition: 0ms !important;
 }
-.visual-refresh .sidebar_c48ade {
-    width: 290px;
+:body {
+    --custom-guild-sidebar-width: 290px;
 }
 :where(.outer_c0bea0).panel_c0bea0 {
     width: 280px;
