--- a/Theme.css
+++ b/Theme.css
@@ -20,5 +20,5 @@
     background-image: url(https://raw.githubusercontent.com/xf1op/DiscordThemeIThink/refs/heads/main/puppi.png)
 }
 body {
-    --custom-guild-sidebar-width: 290px;
+    --custom-guild-sidebar-width: 290px !important;
 }
